--- a/index.html
+++ b/index.html
@@ -70,7 +70,25 @@
 		{{message}}
 	</div>
 
-	<div ng-view></div>
+	Click me: <input type="checkbox" ng-model="checked"><br/>
+	<div>
+		Show:
+      <span class="check-element"
+			ng-show="checked"
+			ng-animate="{show: 'example-show', hide: 'example-hide'}">
+        <span class="icon-thumbs-up"></span> I show up when your checkbox is checked.
+      </span>
+	</div>
+	<div>
+		Hide:
+      <span class="check-element"
+			ng-hide="checked"
+			ng-animate="{show: 'example-show', hide: 'example-hide'}">
+        <span class="icon-thumbs-down"></span> I hide when your checkbox is checked.
+      </span>
+	</div>
+
+	<div ng-view ng-animate="{enter: 'example-enter', leave: 'example-leave'}"></div>
 
 	<div ng-include="'Templates/template.galleryImageViewer.html'" onload="galleryImageViewerLoaded = true"></div>
 	<div ng-include="'Templates/template.gridelements.html'" onload="gridElementsTemplateLoaded = true"></div>
