--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
 
 	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular.min.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular-resource.min.js"></script>
 
 	<script type="text/javascript" src="Scripts/libs/angular-ui/event.js"></script>
