--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 	<meta name="fragment" content="!"/>
 
 	<title>Jaromír Tomka - Umělecký řezbář</title>
+	<!--DEBUG-->
 	<link rel="stylesheet" href="Css/fluid_grid.css"/>
 	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
 	<link rel="stylesheet" href="Css/main.css"/>
+	<!--DEBUG-->
 
+	<!--RELEASE-->
 	<link rel="stylesheet" href="Css/font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="Css/fonts/stylesheet.css"/>
 	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
+	<!--RELEASE-->
 
 	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular.min.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular-resource.min.js"></script>
 
 	<script type="text/javascript" src="Scripts/libs/angular-ui/event.js"></script>
