--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 	<title>Jaromír Tomka - Umělecký řezbář</title>
 	<!--DEBUG-->
-	<!--<link rel="stylesheet" href="Css/fluid_grid.css"/>-->
-	<!--<link rel="stylesheet" href="Css/masparti-responsive.css"/>-->
-	<!--<link rel="stylesheet" href="Css/main.css"/>-->
+	<link rel="stylesheet" href="Css/fluid_grid.css"/>
+	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
+	<link rel="stylesheet" href="Css/main.css"/>
 	<!--DEBUG-->
 
-	<!--RELEASE-->
 	<link rel="stylesheet" href="Css/font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="Css/fonts/stylesheet.css"/>
-	<link rel="stylesheet" href="Css/css.min.css"/>
+	<!--RELEASE-->
+	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
 	<!--RELEASE-->
 
 	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
@@ -30,44 +30,38 @@
 	<script type="text/javascript" src="Scripts/libs/angular-ui/angular.keypress.js"></script>
 
 	<!--DEBUG-->
-	<!--<script type="text/javascript" src="Scripts/libs/showdown.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>-->
+	<script type="text/javascript" src="Scripts/libs/showdown.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
+	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
 
-	<!--<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/directive.ngcResponsiveImage.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/directive.ngcSimpleDrag.js"></script>-->
+	<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcResponsiveImage.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcSimpleDrag.js"></script>
 
-	<!--<script type="text/javascript" src="Scripts/controller.home.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.page.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.login.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.galleryImageViewer.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.p.js"></script>-->
+	<script type="text/javascript" src="Scripts/controller.home.js"></script>
+	<script type="text/javascript" src="Scripts/controller.page.js"></script>
+	<script type="text/javascript" src="Scripts/controller.login.js"></script>
+	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
+	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
+	<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>
+	<script type="text/javascript" src="Scripts/controller.galleryImageViewer.js"></script>
+	<script type="text/javascript" src="Scripts/controller.p.js"></script>
 
-	<!--<script type="text/javascript" src="Scripts/module.appConfig.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/module.apiModule.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>-->
+	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
+	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
+	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
 
 	<!--RELEASE-->
-	<script type="text/javascript" src="Scripts/libs.min.js"></script>
+	<!--<script type="text/javascript" src="Scripts/libs.min.js"></script>-->
 </head>
 <body ng-controller="appController">
 	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
 
 	<div class="clear"></div>
 
-	<!--<div class="btn-group">-->
-	<!--<a class="btn" href="#/home">home</a>-->
-	<!--<a class="btn" href="#/login">login</a>-->
-	<!--<a class="btn" href="Service/cmsClientPHPService/logout.php">logout</a>-->
-	<!--</div>-->
-
 	<div class="alert alert-error" ng-show="message">
-		<b>Chyba:</b>
+		<b></b>
 		{{message}}
 	</div>
 
@@ -77,6 +71,18 @@
 	<div ng-include="'Templates/template.gridelements.html'" onload="gridElementsTemplateLoaded = true"></div>
 
 	<div class="clear"></div>
+
+	<div class="centered-container" ng-hide="hideLoader" ng-animate="{hide : 'fade-out'} " style="position: absolute;top:0px">
+		<div class="loader centered-content">
+			<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>
+
+			<div class="home-loader">
+				<h2>jára tomka</h2>
+				<h5>umělecký řezbář</h5>
+			</div>
+		</div>
+	</div>
+
 </body>
 
 </html>
