--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 	<div class="clear"></div>
 
-	<div class="centered-container" ng-hide="hideLoader" ng-animate="{hide : 'fade-out'} " style="position: absolute;top:0px">
+	<div class="centered-container" ng-hide="hideLoader" ng-animate="{hide : 'fade-out'}" style="position: absolute;top:0px;margin-right: 20px">
 		<div class="loader centered-content">
 			<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>
 
