oprava digest already in progress

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 	<title>Jaromír Tomka - Umělecký řezbář</title>
 	<!--DEBUG-->
-	<!--<link rel="stylesheet" href="Css/fluid_grid.css"/>-->
-	<!--<link rel="stylesheet" href="Css/masparti-responsive.css"/>-->
-	<!--<link rel="stylesheet" href="Css/main.css"/>-->
+	<link rel="stylesheet" href="Css/fluid_grid.css"/>
+	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
+	<link rel="stylesheet" href="Css/main.css"/>
 	<!--DEBUG-->
 
 	<link rel="stylesheet" href="Css/font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="Css/fonts/stylesheet.css"/>
 	<!--RELEASE-->
-	<link rel="stylesheet" href="Css/css.min.css"/>
+	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
 	<!--RELEASE-->
 
 	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
@@ -30,30 +30,30 @@
 	<script type="text/javascript" src="Scripts/libs/angular-ui/angular.keypress.js"></script>
 
 	<!--DEBUG-->
-	<!--<script type="text/javascript" src="Scripts/libs/showdown.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>-->
+	<script type="text/javascript" src="Scripts/libs/showdown.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
+	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
 
-	<!--<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/directive.ngcResponsiveImage.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/directive.ngcSimpleDrag.js"></script>-->
+	<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcResponsiveImage.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcSimpleDrag.js"></script>
 
-	<!--<script type="text/javascript" src="Scripts/controller.home.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.page.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.login.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.galleryImageViewer.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.p.js"></script>-->
+	<script type="text/javascript" src="Scripts/controller.home.js"></script>
+	<script type="text/javascript" src="Scripts/controller.page.js"></script>
+	<script type="text/javascript" src="Scripts/controller.login.js"></script>
+	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
+	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
+	<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>
+	<script type="text/javascript" src="Scripts/controller.galleryImageViewer.js"></script>
+	<script type="text/javascript" src="Scripts/controller.p.js"></script>
 
-	<!--<script type="text/javascript" src="Scripts/module.appConfig.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/module.apiModule.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>-->
+	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
+	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
+	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
 
 	<!--RELEASE-->
-	<script type="text/javascript" src="Scripts/libs.min.js"></script>
+	<!--<script type="text/javascript" src="Scripts/libs.min.js"></script>-->
 </head>
 <body ng-controller="appController">
 	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
