--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 			<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>
 
 			<div class="home-loader">
-				<h2>jára tomka</h2>
-				<h5>umělecký řezbář</h5>
+				<h2>boos</h2>
+				<h5>...</h5>
 			</div>
 		</div>
 	</div>
