refactor - rename file, cleanup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>Jaromír Tomka - Umělecký řezbář</title>
 	<!--DEBUG-->
 	<link rel="stylesheet" href="Css/fluid_grid.css"/>
-	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
+	<link rel="stylesheet" href="Css/responsive.css"/>
 	<link rel="stylesheet" href="Css/main.css"/>
 	<!--DEBUG-->
 
