--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 		<div class="grid_3">
 			<div><a href="#!/page/projekty">Projekty</a></div>
 			<div><a href="#!/page/historie">Historie</a></div>
-			<div><a href="#">Činnost</a></div>
-			<div><a href="#">Kontakt</a></div>
+			<div><a href="#!/page/cinnost">Činnost</a></div>
+			<div><a href="#!/page/kontakt">Kontakt</a></div>
 		</div>
 
 		<div class="grid_12">
