--- a/index.html
+++ b/index.html
@@ -69,18 +69,17 @@
 	<div class="container_12">
 		<div class="grid_3"> LOGO</div>
 		<div class="grid_6"><div class="logo-home"> architektura design project management inženýring</div></div>
-		<div class="grid_3">
+		<div class="grid_3" style="background-color: azure">
 			<div><a href="#!/page/projekty">Projekty</a></div>
-			<div><a href="#!/page/historie">Historie</a></div>
+			<div><a href="#!/p/historie/0">Historie</a></div>
 			<div><a href="#!/page/cinnost">Činnost</a></div>
 			<div><a href="#!/page/kontakt">Kontakt</a></div>
 		</div>
 
-		<div class="grid_12">
+		<div class="grid_12 index-content" >
 			<div ng-view class="view"></div>
 		</div>
 	</div>
-
 
 	<div ng-include="'Templates/template.galleryImageViewer.html'" onload="galleryImageViewerLoaded = true"></div>
 	<div ng-include="'Templates/template.gridelements.html'" onload="gridElementsTemplateLoaded = true"></div>
