--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script type="text/javascript" src="Scripts/libs/showdown.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
 	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
+	<script type="text/javascript" src="Scripts/class.gridElementsList.js"></script>
 
 	<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>
 	<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>
