--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<link rel="stylesheet" href="Css/main.css"/>
 	<!--DEBUG-->
 
-	<link rel="stylesheet" href="Css/font-awesome/css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="Css/fonts/stylesheet.css"/>
+	<link rel="stylesheet" href="libs/css/font-awesome/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="libs/css/font/stylesheet.css"/>
 	<!--RELEASE-->
 	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
 	<!--RELEASE-->
@@ -58,45 +58,54 @@
 	<!--<script type="text/javascript" src="Scripts/libs.min.js"></script>-->
 </head>
 <body ng-controller="appController" class="boos">
-	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
+<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
 
-	<div class="clear"></div>
+<div class="clear"></div>
 
-	<div class="alert alert-error" ng-show="message">
-		<b></b>
-		{{message}}
+<div class="alert alert-error" ng-show="message">
+	<b></b>
+	{{message}}
+</div>
+
+<div class="container_12">
+	<div class="border-bottom">
+		<div class="grid_5"> LOGO</div>
+		<div class="grid_4">
+			<div class="border-top">
+				<div class="logo-home"> architektura design project management inženýring</div>
+			</div>
+		</div>
+		<div class="grid_3 main-menu">
+			<div class="border-top">
+				<div><a href="#!/page/projekty">Projekty</a></div>
+				<div><a href="#!/p/historie/0">Historie</a></div>
+				<div><a href="#!/page/cinnost">Činnost</a></div>
+				<div><a href="#!/page/kontakt">Kontakt</a></div>
+			</div>
+		</div>
+		<div class="clearfix"></div>
 	</div>
 
-	<div class="container_12">
-		<div class="grid_3"> LOGO</div>
-		<div class="grid_6"><div class="logo-home"> architektura design project management inženýring</div></div>
-		<div class="grid_3" style="background-color: azure">
-			<div><a href="#!/page/projekty">Projekty</a></div>
-			<div><a href="#!/p/historie/0">Historie</a></div>
-			<div><a href="#!/page/cinnost">Činnost</a></div>
-			<div><a href="#!/page/kontakt">Kontakt</a></div>
-		</div>
-
-		<div class="grid_12 index-content" >
-			<div ng-view class="view"></div>
-		</div>
+	<div class="grid_12 index-content">
+		<div ng-view class="view"></div>
 	</div>
+</div>
 
-	<div ng-include="'Templates/template.galleryImageViewer.html'" onload="galleryImageViewerLoaded = true"></div>
-	<div ng-include="'Templates/template.gridelements.html'" onload="gridElementsTemplateLoaded = true"></div>
+<div ng-include="'Templates/template.galleryImageViewer.html'" onload="galleryImageViewerLoaded = true"></div>
+<div ng-include="'Templates/template.gridelements.html'" onload="gridElementsTemplateLoaded = true"></div>
 
-	<div class="clear"></div>
+<div class="clear"></div>
 
-	<!--<div class="centered-container" ng-hide="hideLoader" ng-animate="{hide : 'fade-out'}" style="position: absolute;top:0px;margin-right: 20px">-->
-		<!--<div class="loader centered-content">-->
-			<!--<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>-->
+<!--<div class="centered-container" ng-hide="hideLoader" ng-animate="{hide : 'fade-out'}" style="position: absolute;top:0px;margin-right: 20px">-->
+<!--<div class="loader centered-content">-->
+<!--<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>-->
 
-			<!--<div class="home-loader">-->
-				<!--<h2>boos</h2>-->
-				<!--<h5>...</h5>-->
-			<!--</div>-->
-		<!--</div>-->
-	<!--</div>-->
+<!--<div class="home-loader">-->
+<!--<h2>boos</h2>-->
+<!--<h5>...</h5>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 </body>
 
