predelano na json

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 		</div>
 		<div class="grid_3 main-menu">
 			<div class="border-top">
-				<div><a href="#!/page/projekty">Projekty</a></div>
-				<div><a href="#!/p/historie/0">Historie</a></div>
-				<div><a href="#!/page/cinnost">Činnost</a></div>
-				<div><a href="#!/page/kontakt">Kontakt</a></div>
+				<div><a href="#!/page/projekty" ng-class="isSelectedLink('projekty')">Projekty</a></div>
+				<div><a href="#!/p/historie" ng-class="isSelectedLink('historie')">Historie</a></div>
+				<div><a href="#!/p/cinnost" ng-class="isSelectedLink('cinnost')">Činnost</a></div>
+				<div><a href="#!/p/kontakt" ng-class="isSelectedLink('kontakt')">Kontakt</a></div>
 			</div>
 		</div>
 		<div class="clearfix"></div>
