--- a/index.html
+++ b/index.html
@@ -96,15 +96,14 @@
 <div class="clear"></div>
 
 
-<div class="dumbBoxWrap gallery-image-viewer" ng-show="xxx" >
+<div class="dumbBoxWrap gallery-image-viewer" ng-show="overlaygallery" ng-controller="abc">
 	<div class="dumbBoxOverlay">
 		<div ng-show="loading" class="loader">
 			<img src="Css/loaders/horizontalloadersmall_white.gif" alt="loading..."/>
-		</div>
+		</div>opr
 		&nbsp;
 	</div>
 	<div class="vertical-offset" >
-
 
 		<div class="full-height" >
 			<div class="container_12 full-height">
@@ -121,7 +120,7 @@
 				<div class="grid_8 full-height">
 					<div class="full-height-content">
 						<h3 ng-click="close()">close </h3>
-						<div gridelement="xxx"></div>
+						<div gridelement="overlaygallery"></div>
 					</div>
 				</div>
 				<div class="grid_2 full-height">
