--- a/index.html
+++ b/index.html
@@ -22,18 +22,31 @@
 	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
 	<!--RELEASE-->
 
-	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular.min.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular-resource.min.js"></script>
+	<script type="text/javascript" src="libs/js/jquery.min.js"></script>
+	<script type="text/javascript" src="libs/js/angular.js"></script>
+	<script type="text/javascript" src="libs/js/angular-route.js"></script>
+	<script type="text/javascript" src="libs/js/angular-resource.js"></script>
 
-	<script type="text/javascript" src="Scripts/libs/angular-ui/event.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular-ui/angular.keypress.js"></script>
+	<script type="text/javascript" src="libs/js/angular-ui/event.js"></script>
+	<script type="text/javascript" src="libs/js/angular-ui/angular.keypress.js"></script>
 
 	<!--DEBUG-->
-	<script type="text/javascript" src="Scripts/libs/showdown.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
+	<script type="text/javascript" src="libs/js/showdown.js"></script>
+	<script type="text/javascript" src="libs/js/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
+
+	<script type="text/javascript" src="gallery/class.gallery.js"></script>
+	<script type="text/javascript" src="gallery/module.galleryBrowser.js"></script>
+
+	<script type="text/javascript" src="api/class.apiWrapper.js"></script>
+	<script type="text/javascript" src="api/module.apiModule.js"></script>
+
+	<script type="text/javascript" src="data/module.repository.js"></script>
+
+
+
 	<script type="text/javascript" src="Scripts/class.gridList.js"></script>
-	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
+
+
 	<script type="text/javascript" src="Scripts/class.gridElementsList.js"></script>
 
 	<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>
@@ -52,8 +65,7 @@
 	<script type="text/javascript" src="Scripts/controller.galleryImageViewer.js"></script>
 	<script type="text/javascript" src="Scripts/controller.p.js"></script>
 
-	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
-	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
+	<script type="text/javascript" src="common/module.appConfig.js"></script>
 	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
 
 	<!--RELEASE-->
@@ -96,7 +108,8 @@
 <div class="clear"></div>
 
 
-<div class="dumbBoxWrap gallery-image-viewer" ng-show="overlaygallery" ng-controller="abc">
+<div class="dumbBoxWrap gallery-image-viewer" ngx-show="overlaygallery" ng-controller="abc">
+
 	<div class="dumbBoxOverlay">
 		<div ng-show="loading" class="loader">
 			<img src="Css/loaders/horizontalloadersmall_white.gif" alt="loading..."/>
@@ -120,6 +133,8 @@
 				<div class="grid_8 full-height">
 					<div class="full-height-content">
 						<h3 ng-click="close()">close </h3>
+						<h1 style="color:white" >{{ currentItem }}</h1>
+						<h1 style="color:white" >..{{ uch }}</h1>
 						<div gridelement="overlaygallery"></div>
 					</div>
 				</div>
