--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 	<!--DEBUG-->
 	<script type="text/javascript" src="libs/js/showdown.js"></script>
+	<script type="text/javascript" src="common/module.stringutils.js"></script>
 	<script type="text/javascript" src="libs/js/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
 
 	<script type="text/javascript" src="gallery/class.gallery.js"></script>
@@ -42,12 +43,11 @@
 
 	<script type="text/javascript" src="data/module.repository.js"></script>
 
-
-
 	<script type="text/javascript" src="Scripts/class.gridList.js"></script>
 
 
 	<script type="text/javascript" src="Scripts/class.gridElementsList.js"></script>
+	<script type="text/javascript" src="common/EventDispatcher.js"></script>
 
 	<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>
 	<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>
@@ -66,6 +66,9 @@
 	<script type="text/javascript" src="Scripts/controller.p.js"></script>
 
 	<script type="text/javascript" src="common/module.appConfig.js"></script>
+	<script type="text/javascript" src="common/module.notifications.js"></script>
+
+
 	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
 
 	<!--RELEASE-->
@@ -81,7 +84,7 @@
 	{{message}}
 </div>
 
-<div class="container_12">
+<div class="container_12 maincontent">
 	<div class="border-bottom">
 		<div class="grid_5"> LOGO</div>
 		<div class="grid_4">
@@ -108,17 +111,17 @@
 <div class="clear"></div>
 
 
-<div class="dumbBoxWrap gallery-image-viewer" ngx-show="overlaygallery" ng-controller="abc">
+<div class="dumbBoxWrap gallery-image-viewer" ng-show="overlayGalleryShow" ng-controller="galleryBrowser">
 
 	<div class="dumbBoxOverlay">
 		<div ng-show="loading" class="loader">
 			<img src="Css/loaders/horizontalloadersmall_white.gif" alt="loading..."/>
-		</div>opr
+		</div>
 		&nbsp;
 	</div>
-	<div class="vertical-offset" >
+	<div class="vertical-offset">
 
-		<div class="full-height" >
+		<div class="full-height">
 			<div class="container_12 full-height">
 				<div class="grid_2 full-height">
 					<div class="full-height-content">
@@ -132,10 +135,7 @@
 				</div>
 				<div class="grid_8 full-height">
 					<div class="full-height-content">
-						<h3 ng-click="close()">close </h3>
-						<h1 style="color:white" >{{ currentItem }}</h1>
-						<h1 style="color:white" >..{{ uch }}</h1>
-						<div gridelement="overlaygallery"></div>
+						<div gridelement="currentItem" skin="overlay"></div>
 					</div>
 				</div>
 				<div class="grid_2 full-height">
@@ -153,7 +153,6 @@
 
 	</div>
 </div>
-
 
 
 <script id="text.thtml" type="text/ng-template">
@@ -186,18 +185,53 @@
 	<div
 			class="grid_4">
 		<div class="gdata-album-list" ng-controller="gridelementAlbumCtrl">
-			<div style="min-height:{{y}}px" class="album-image-wrap">
+			<div style="min-height:{{y}}px" class="album-image-wrap" ng-click="imageClick(name)">
 				<img style="min-height:{{y}}px" class="album-image" src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>
 
 				<div class="album-name">
 					<div class="content" title="{{name}}">
-						<a ng-click="testxxx(name)">{{ name }} ss</a>
+						<a>{{ name }}</a>
 					</div>
 				</div>
 			</div>
 			<div class="clear"></div>
 		</div>
 
+</script>
+
+<script id="album_overlay.thtml" type="text/ng-template">
+	<div class="album-overlay" ng-controller="gridelementAlbumOverlayCtrl">
+
+		<div class="grid_12 ">
+			<div class="header">
+				<h1>{{ name }}</h1>
+			</div>
+		</div>
+		<div class="grid_6">
+			<div class="image-envelope preview-current">
+				<img class="album-image" ng-src="{{currentImage.Thumbnails[2].PhotoUri}}"/>
+			</div>
+
+		</div>
+		<div class="grid_6">
+			<div class="">
+				<div ng-repeat="image in albumPhotos" class="preview"
+					 ng-class="currentImageIndex == $index ? 'selected' : null">
+					<img ng-click="showImagePreview($index)" ng-src="{{image.Thumbnails[0].PhotoUri}}"/>
+				</div>
+			</div>
+			<div class="" >
+				<div class="details">
+					<div>{{ services }}</div>
+					<div>{{ year }}</div>
+					<div>{{ type }}</div>
+				</div>
+			</div>
+		</div>
+		<div class="grid_12">
+			<div class="more-details"><div ng-bind-html="text"></div></div>
+		</div>
+	</div>
 </script>
 
 <script id="gdataalbum_Single.thtml" type="text/ng-template">
