oprava designu na index

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
 
 <div class="container_12 maincontent">
 	<div class="border-bottom">
-		<div class="grid_5"> jbjb LOGO</div>
+		<div class="grid_5">
+			<div class="main-logo">
+				<img src="resources/booswhite.png" alt="BOOS"/></div>
+			</div>
 		<div class="grid_4">
 			<div class="border-top">
 				<div class="logo-home"> architektura design project management inženýring</div>
