--- a/index.html
+++ b/index.html
@@ -10,69 +10,22 @@
 	<meta name="fragment" content="!"/>
 
 	<title>BOOS</title>
-	<!--DEBUG-->
-	<link rel="stylesheet" href="Css/fluid_grid.css"/>
-	<link rel="stylesheet" href="Css/responsive.css"/>
-	<link rel="stylesheet" href="Css/main.css"/>
-	<!--DEBUG-->
-
-	<link rel="stylesheet" href="libs/css/font-awesome/css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="libs/css/font/stylesheet.css"/>
-	<!--RELEASE-->
-	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
-	<!--RELEASE-->
 
 	<script type="text/javascript" src="libs/js/jquery.min.js"></script>
 	<script type="text/javascript" src="libs/js/angular.js"></script>
 	<script type="text/javascript" src="libs/js/angular-route.js"></script>
 	<script type="text/javascript" src="libs/js/angular-resource.js"></script>
-
 	<script type="text/javascript" src="libs/js/angular-ui/event.js"></script>
 	<script type="text/javascript" src="libs/js/angular-ui/angular.keypress.js"></script>
-
-	<!--DEBUG-->
 	<script type="text/javascript" src="libs/js/showdown.js"></script>
-	<script type="text/javascript" src="common/module.stringutils.js"></script>
 	<script type="text/javascript" src="libs/js/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
 
-	<script type="text/javascript" src="gallery/class.gallery.js"></script>
-	<script type="text/javascript" src="gallery/module.galleryBrowser.js"></script>
+	<script type="text/javascript" src="build/app.js"></script>
+	<link rel="stylesheet" href="build/app.css"/>
 
-	<script type="text/javascript" src="api/class.apiWrapper.js"></script>
-	<script type="text/javascript" src="api/module.apiModule.js"></script>
+	<link rel="stylesheet" href="libs/css/font-awesome/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="libs/css/font/stylesheet.css"/>
 
-	<script type="text/javascript" src="data/module.repository.js"></script>
-
-	<script type="text/javascript" src="Scripts/class.gridList.js"></script>
-
-
-	<script type="text/javascript" src="Scripts/class.gridElementsList.js"></script>
-	<script type="text/javascript" src="common/EventDispatcher.js"></script>
-
-	<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>
-	<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>
-	<script type="text/javascript" src="Scripts/directive.ngcResponsiveImage.js"></script>
-	<script type="text/javascript" src="Scripts/directive.ngcSimpleDrag.js"></script>
-	<script type="text/javascript" src="Scripts/directive.ngcOverlay.js"></script>
-
-	<script type="text/javascript" src="Scripts/controller.home.js"></script>
-	<script type="text/javascript" src="Scripts/controller.page.js"></script>
-	<script type="text/javascript" src="Scripts/controller.login.js"></script>
-	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
-	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
-	<script type="text/javascript" src="Scripts/controller.gridelementAlbumCtrl.js"></script>
-	<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>
-	<script type="text/javascript" src="Scripts/controller.galleryImageViewer.js"></script>
-	<script type="text/javascript" src="Scripts/controller.p.js"></script>
-
-	<script type="text/javascript" src="common/module.appConfig.js"></script>
-	<script type="text/javascript" src="common/module.notifications.js"></script>
-
-
-	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
-
-	<!--RELEASE-->
-	<!--<script type="text/javascript" src="Scripts/libs.min.js"></script>-->
 </head>
 <body ng-controller="appController" class="boos">
 <i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
