aspect ratio images

--- a/_directives/index.html
+++ b/_directives/index.html
@@ -13,12 +13,68 @@
 
 	<script type="text/javascript" src="build/app.libs.js"></script>
 	<script type="text/javascript" src="build/app.js"></script>
-	<link rel="stylesheet" href="build/app.css"/>
+	<link rel="stylesheet" href="css/directives.css"/>
+	<link rel="stylesheet" href="css/fluid_grid.css"/>
 
 
 </head>
 <body>
- <img src="https://lh6.googleusercontent.com/-ZV0s23gJdHw/UT8AlY4SNtE/AAAAAAAAArI/zyrpsFVexME/w520/Pictures.jpg" />
+
+<div class="container_12">
+	<div class="grid_4">
+		<div class="aspect-ratio-box ratio4_3">
+			<div class="aspect-ratio-content">
+				<div style="background-color: blue;width: 100%;height: 100%">.</div>
+			</div>
+		</div>
+	</div>
+	<div class="grid_4">
+		<div class="aspect-ratio-box ratio4_3">
+			<div class="aspect-ratio-content">
+				<div style="background-color: green;width: 100%;height: 100%">.</div>
+			</div>
+		</div>
+	</div>
+	<div class="grid_4">
+		<div class="aspect-ratio-box ratio4_3">
+			<div class="aspect-ratio-content">
+				<div style="background-color: red;width: 100%;height: 100%">.</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="grid_3">
+		<div class="aspect-ratio-box ratio9_16">
+			<div class="aspect-ratio-content">
+				<div style="background-color: blue;width: 100%;height: 100%">.</div>
+			</div>
+		</div>
+	</div>
+	<div class="grid_3">
+		<div class="aspect-ratio-box ratio4_3">
+			<div class="aspect-ratio-content">
+				<div style="background-color: green;width: 100%;height: 100%">.</div>
+			</div>
+		</div>
+	</div>
+	<div class="grid_3">
+		<div class="aspect-ratio-box ratio4_3">
+			<div class="aspect-ratio-content">
+				<div style="background-color: red;width: 100%;height: 100%">.</div>
+			</div>
+		</div>
+	</div>
+	<div class="grid_3">
+		<div class="aspect-ratio-box ratio4_3">
+			<div class="aspect-ratio-content">
+				<div style="background-color: blue;width: 100%;height: 100%">.</div>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+
 </body>
 </html>
 
