--- a/index.html
+++ b/index.html
@@ -153,17 +153,27 @@
 	<div
 
 			class="grid_4">
-		<div class="gdata-album-list" ng-controller="gridelementAlbumCtrl">
-			<div style="min-height:{{y}}px" class="album-image-wrap" ng-click="imageClick(name)">
-				<img style="min-height:{{y}}px" class="album-image"
-					 ng-src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>
 
-				<div class="album-name">
-					<div class="content" title="{{name}}">
-						<a>{{ name }}</a>
+
+		<div class="gdata-album-list" ng-controller="gridelementAlbumCtrl">
+			<div class="aspect-ratio-box ratio3_4">
+				<div class="aspect-ratio-content album-image-wrap">
+					<div style="backgrxound-color: red;width: 100%;height: 100%">
+						<img  class="album-image" ng-src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>
 					</div>
 				</div>
 			</div>
+			<div class="album-image-wrap" ><a>{{ name }}</a></div>
+			<!--<div style="min-height:{{y}}px" class="album-image-wrap" ng-click="imageClick(name)">-->
+				<!--<img style="min-height:{{y}}px" class="album-image"-->
+					 <!--ng-src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>-->
+
+				<!--<div class="album-name">-->
+					<!--<div class="content" title="{{name}}">-->
+						<!--<a>{{ name }}</a>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
 			<div class="clear"></div>
 		</div>
 
