--- a/index.html
+++ b/index.html
@@ -150,30 +150,17 @@
 </script>
 
 <script id="album.thtml" type="text/ng-template">
-	<div
-
-			class="grid_4">
-
-
+	<div class="grid_4">
 		<div class="gdata-album-list" ng-controller="gridelementAlbumCtrl">
-			<div class="aspect-ratio-box ratio3_4">
+			<div class="aspect-ratio-box" ng-class="cssRatio" ng-click="imageClick(name)">
 				<div class="aspect-ratio-content album-image-wrap">
-					<div style="backgrxound-color: red;width: 100%;height: 100%">
-						<img  class="album-image" ng-src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>
-					</div>
+					<div ngc-fit-to-box-image="album.Thumbnail.Thumbnails[0]" style="width: 100%;height: 100%;background-color: greenyellow">.</div>
+					<!--<div ngc-fit-to-image="album.Thumbnail" style="backgrxound-color: red;width: 100%;height: 100%">-->
+						<!--<img  class="album-image" ng-src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>-->
+					<!--</div>-->
 				</div>
 			</div>
-			<div class="album-image-wrap" ><a>{{ name }}</a></div>
-			<!--<div style="min-height:{{y}}px" class="album-image-wrap" ng-click="imageClick(name)">-->
-				<!--<img style="min-height:{{y}}px" class="album-image"-->
-					 <!--ng-src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>-->
-
-				<!--<div class="album-name">-->
-					<!--<div class="content" title="{{name}}">-->
-						<!--<a>{{ name }}</a>-->
-					<!--</div>-->
-				<!--</div>-->
-			<!--</div>-->
+			<div class="album-name" ><a>{{ name }} &nbsp;</a></div>
 			<div class="clear"></div>
 		</div>
 
@@ -260,6 +247,16 @@
 	</div>
 </script>
 
+
+<script>
+	$(document).ready(function () {
+		$("body").click(function () {
+			var x = $(".xxx").width();
+			console.log(x);
+
+		})
+	})
+</script>
 </body>
 </html>
 
